Update german rules
Fix spelling mistakes and remove artifacts of previously removed "you die if attempt unsuccessful" rule.

--- a/murder/public/germanRules.html
+++ b/murder/public/germanRules.html
@@ -10,9 +10,9 @@ Damit ein Mordversuch erfolgreich ist und der Mordauftrag ausgefüllt wird, muss
     </li>
 </ul>
 <br>
-Sollest du dein Opfer erfolgreich getötet haben, muss dein Opfer auf dieser WebSite angeben, dass es gestorben ist und eine kreative sowie witzige Todesnachricht eingeben (z.B. ein Flachwitz mit dem überreichten Mordwerkzeug).
+Sollest du dein Opfer erfolgreich getötet haben, muss dein Opfer auf dieser Website angeben, dass es gestorben ist und eine kreative sowie witzige Todesnachricht eingeben (z.B. ein Flachwitz mit dem überreichten Mordwerkzeug).
 <br>
-Dein neuer Auftrag ist nun der Auftrag von deinem bereits getöteten Opfer. Du siehst ihn in deinem Dashboard, sobald dein "altes Opfer" sich als ermordert einträgt!
+Dein neuer Auftrag ist nun der Auftrag von deinem bereits getöteten Opfer. Du siehst ihn in deinem Dashboard, sobald dein "altes Opfer" sich als ermordet einträgt!
 <br>
 
 Alle Tode werden mit der Zeit, dem Ort und der angegebenen Todesnachricht auf dem für alle Spieler sichtbaren Dashboard veröffentlicht.
@@ -24,11 +24,11 @@ Damit keine Missverständnisse auftreten:
         Solange du das Überreichen eines Gegenstandes nicht laut für einen Mordversuch erklärst, treffen diese Regeln nicht auf die Übergabe zu. Eine typische Strategie ist, seinem Opfer mehrere Gegenstände zu übergeben ohne etwas zu sagen, um dieses zu trügen.
     </li>
     <li>
-        Spieler gelten nur dann als lebend (und sind nur dann im Stande als Zeuge einen Mord wahrzunehmen), wenn sie einerseits am Spiel teilnehmen und andererseits noch nicht getötet wurden bzw. noch nicht gestorben sind.
+        Spieler gelten nur dann als lebend (und sind nur dann im Stande als Zeuge einen Mord wahrzunehmen), wenn sie einerseits am Spiel teilnehmen und andererseits noch nicht getötet wurden.
     </li>
     <li>
         Ein Mord kann auch erfolgreich ablaufen, wenn während der Übergabe andere lebende Spieler anwesend sind, welche den Mordversuch nicht direkt beobachten, weil sie z.B. nicht aufmerksam oder abgelenkt sind.
     </li>
 </ul>
 
-DU hast noch fragen? Frag einfach Marco ^^
+Du hast noch Fragen? Bitte wende dich an Marco!
